# backend/src/modules/upload/upload.controller.ts
@@ -3,12 +3,13 @@ import { UploadService } from './upload.service';
 import { CreateUploadDto } from './dto/create-upload.dto';
 import { UpdateUploadDto } from './dto/update-upload.dto';
 import { FileInterceptor } from '@nestjs/platform-express';
-import { ApiBody, ApiCreatedResponse, ApiOperation, ApiResponse } from '@nestjs/swagger';
+import { ApiBody, ApiCreatedResponse, ApiOkResponse, ApiOperation, ApiResponse } from '@nestjs/swagger';
 import { JwtAuthGuard } from '../auth/guards/jwt-auth-guard';
 import { GetUser } from '../auth/decorators/current-user.decorator';
 import { User } from '@/generated/prisma/client';
 import { UploadResponseDto } from './dto/upload-response.dto';
 import { MulterUploadExceptionFilter } from './multer-upload.exception-filter';
+import { DeleteResponseDto } from './dto/delete-response.dto';
 
 @UseGuards(JwtAuthGuard)
 @Controller('upload')
@@ -47,7 +48,8 @@ export class UploadController {
   }
 
   @Delete(':id')
-  remove(@Param('id') id: string) {
-    return this.uploadService.remove(+id);
+  @ApiOkResponse({ type: DeleteResponseDto })
+  async remove(@Param('id') id: string, @Body("public_id") publicId: string) {
+    return this.uploadService.remove(id, publicId);
   }
 }
